<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardWrapHeight"
    app:cardUseCompatPadding="true">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/ConstraintDefault"
        android:padding="@dimen/dimens_10dp">
        <TextView
            android:id="@+id/tv_jenis_transaksi"
            style="@style/TextExtraBig"
            android:text="@string/dummy_jenis_transaksi"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_status_transaksi"/>
        <TextView
            android:id="@+id/tv_status_transaksi"
            style="@style/TextExtraBig"
            android:text="@string/dummy_status"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_jenis_transaksi"/>
        <TextView
            android:id="@+id/tv_nominal_transaksi"
            style="@style/TextSuperExtraBig"
            android:text="@string/dummy_saldo"
            app:layout_constraintTop_toBottomOf="@id/tv_jenis_transaksi"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tv_id_transaksi"
            style="@style/TextNormal"
            android:text="@string/dummy_id_transaksi"
            android:layout_marginTop="@dimen/dimens_10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nominal_transaksi"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>