<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearVerticalDefault"
    tools:context="com.anangkur.uangkerja.feature.reviewTransaction.ReviewTransakiActivity">

    <include layout="@layout/layout_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ConstraintDefault"
        android:padding="@dimen/dimens_20dp">
        <TextView
            android:id="@+id/tv_label_total"
            style="@style/TextNormal"
            android:text="@string/label_total_pembayaran"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_total"
            style="@style/TextSuperSuperExtraBig"
            android:text="@string/dummy_saldo"
            app:layout_constraintTop_toBottomOf="@id/tv_label_total"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_label_pilih_bank"
            style="@style/TextNormal"
            android:text="@string/label_pilih_bank"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/tv_total"
            app:layout_constraintBottom_toTopOf="@id/spinner_pilih_bank"
            app:layout_constraintLeft_toLeftOf="parent" />
        <ImageView
            android:id="@+id/btn_reload_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh_black_24dp"
            android:padding="@dimen/dimens_10dp"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toTopOf="@id/tv_label_pilih_bank"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_pilih_bank"
            app:layout_constraintLeft_toRightOf="@id/tv_label_pilih_bank"/>
        <Spinner
            android:id="@+id/spinner_pilih_bank"
            style="@style/SpinnerDefault"
            android:layout_marginTop="@dimen/dimens_4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_pilih_bank"
            app:layout_constraintBottom_toTopOf="@id/layout_bank"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <ProgressBar
            android:id="@+id/pb_spinner_bank"
            style="?android:progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/spinner_pilih_bank"
            app:layout_constraintBottom_toBottomOf="@id/spinner_pilih_bank"
            app:layout_constraintLeft_toLeftOf="@id/spinner_pilih_bank"
            app:layout_constraintRight_toRightOf="@id/spinner_pilih_bank"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bank"
            style="@style/ConstraintWrapHeight"
            android:background="@drawable/rect_rounded_10dp_gray"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:padding="@dimen/dimens_20dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_pilih_bank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:id="@+id/tv_label_nama_bank"
                style="@style/TextNormal"
                android:text="@string/label_nama_bank"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_nama_bank"/>
            <TextView
                android:id="@+id/tv_nama_bank"
                style="@style/TextNormal"
                android:textStyle="bold"
                android:text="@string/dummy_bank_mandiri"
                app:layout_constraintTop_toTopOf="@id/tv_label_nama_bank"
                app:layout_constraintLeft_toRightOf="@id/tv_label_nama_bank"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/tv_label_norek"
                style="@style/TextNormal"
                android:text="@string/label_nomor_rekening"
                android:layout_marginTop="@dimen/dimens_20dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@id/tv_label_nama_bank"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_norek"/>
            <TextView
                android:id="@+id/tv_norek"
                style="@style/TextNormal"
                android:textStyle="bold"
                android:text="@string/dummy_norek"
                app:layout_constraintTop_toTopOf="@id/tv_label_norek"
                app:layout_constraintLeft_toRightOf="@id/tv_label_norek"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/tv_label_atas_nama"
                style="@style/TextNormal"
                android:text="@string/label_atas_nama"
                android:layout_marginTop="@dimen/dimens_20dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@id/tv_label_norek"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_atas_nama"/>
            <TextView
                android:id="@+id/tv_atas_nama"
                style="@style/TextNormal"
                android:textStyle="bold"
                android:text="@string/dummy_atas_nama"
                app:layout_constraintTop_toTopOf="@id/tv_label_atas_nama"
                app:layout_constraintLeft_toRightOf="@id/tv_label_atas_nama"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.anangkur.materialloadingbutton.MaterialLoadingButton
            android:id="@+id/btn_lanjutkan"
            style="@style/ButtonDefault"
            app:mlb_defaultColor="@color/colorPrimary"
            app:mlb_textColor="@color/white"
            app:mlb_cornerRadius="@dimen/dimens_100dp"
            app:mlb_textButton="@string/btn_lanjutkan"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/layout_bank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
