<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearVerticalDefault"
    tools:context="com.anangkur.uangkerja.feature.pilihKoin.PilihKoinActivity">

    <include layout="@layout/layout_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ConstraintDefault"
        android:padding="@dimen/dimens_20dp">
        <TextView
            android:id="@+id/tv_label_koinmu"
            style="@style/TextNormal"
            android:text="@string/label_koin_kamu"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_koinmu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_koinmu"
            style="@style/TextSuperSuperExtraBig"
            android:text="@string/dummy_koin"
            app:layout_constraintTop_toBottomOf="@id/tv_label_koinmu"
            app:layout_constraintBottom_toTopOf="@id/til_koin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_koin"
            style="@style/TextInputLayoutDefault"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_30"
            app:layout_constraintVertical_chainStyle="packed">
            <EditText
                android:id="@+id/et_koin"
                style="@style/EditTextDefault"
                android:text="@string/dummy_koin"
                android:hint="@string/hint_nominal_koin"
                android:inputType="numberDecimal"
                android:digits="0987654321"
                android:maxLines="1"
                android:maxLength="5"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.anangkur.materialloadingbutton.MaterialLoadingButton
            android:id="@+id/btn_30"
            style="@style/ButtonSmall"
            app:mlb_textButton="@string/btn_30_koin"
            app:mlb_cornerRadius="@dimen/dimens_100dp"
            app:mlb_defaultColor="@color/colorPrimary"
            app:mlb_textColor="@color/white"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/til_koin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_10"/>
        <com.anangkur.materialloadingbutton.MaterialLoadingButton
            android:id="@+id/btn_10"
            style="@style/ButtonSmall"
            app:mlb_textButton="@string/btn_10_koin"
            app:mlb_cornerRadius="@dimen/dimens_100dp"
            app:mlb_defaultColor="@color/colorPrimary"
            app:mlb_textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/btn_30"
            app:layout_constraintBottom_toBottomOf="@id/btn_30"
            app:layout_constraintLeft_toRightOf="@id/btn_30"
            app:layout_constraintRight_toLeftOf="@id/btn_5"/>
        <com.anangkur.materialloadingbutton.MaterialLoadingButton
            android:id="@+id/btn_5"
            style="@style/ButtonSmall"
            app:mlb_textButton="@string/btn_5_koin"
            app:mlb_cornerRadius="@dimen/dimens_100dp"
            app:mlb_defaultColor="@color/colorPrimary"
            app:mlb_textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/btn_30"
            app:layout_constraintBottom_toBottomOf="@id/btn_30"
            app:layout_constraintLeft_toRightOf="@id/btn_10"
            app:layout_constraintRight_toRightOf="parent"/>
        <com.anangkur.materialloadingbutton.MaterialLoadingButton
            android:id="@+id/btn_submit"
            style="@style/ButtonDefault"
            app:mlb_textButton="@string/btn_submit"
            app:mlb_cornerRadius="@dimen/dimens_100dp"
            app:mlb_defaultColor="@color/colorPrimary"
            app:mlb_textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn_30"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
