<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearVerticalDefault"
    tools:context="com.anangkur.uangkerja.feature.detailTransaction.DetailTransactionActivity">

    <include layout="@layout/layout_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ConstraintDefault"
        android:padding="@dimen/dimens_20dp">
        <TextView
            android:id="@+id/tv_label_total"
            style="@style/TextNormal"
            android:text="@string/label_total_pembayaran"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_total"
            style="@style/TextSuperSuperExtraBig"
            android:text="@string/dummy_saldo"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/tv_label_total"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_copy_nominal"/>
        <ImageView
            android:id="@+id/btn_copy_nominal"
            style="@style/ImageViewWrapAll"
            android:padding="@dimen/dimens_10dp"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toTopOf="@id/tv_total"
            app:layout_constraintBottom_toBottomOf="@id/tv_total"
            app:layout_constraintLeft_toRightOf="@id/tv_total"
            app:layout_constraintRight_toRightOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_status"
            style="@style/ConstraintWrapHeight"
            android:background="@drawable/rect_rounded_10dp_gray"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:padding="@dimen/dimens_20dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/tv_total"
            app:layout_constraintBottom_toTopOf="@id/layout_bank"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:id="@+id/tv_message_status"
                style="@style/TextNormal"
                android:text="@string/dummy_message_status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/tv_date_status"
                style="@style/TextExtraBig"
                android:text="@string/dummy_date_status"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimens_4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_message_status"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bank"
            style="@style/ConstraintWrapHeight"
            android:background="@drawable/rect_rounded_10dp_gray"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:padding="@dimen/dimens_20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:id="@+id/tv_label_nama_bank"
                style="@style/TextNormal"
                android:text="@string/label_nama_bank"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_nama_bank"/>
            <TextView
                android:id="@+id/tv_nama_bank"
                style="@style/TextNormal"
                android:textStyle="bold"
                android:text="@string/dummy_bank_mandiri"
                app:layout_constraintTop_toTopOf="@id/tv_label_nama_bank"
                app:layout_constraintLeft_toRightOf="@id/tv_label_nama_bank"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/tv_label_norek"
                style="@style/TextNormal"
                android:text="@string/label_nomor_rekening"
                android:layout_marginTop="@dimen/dimens_20dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@id/tv_label_nama_bank"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_norek"/>
            <TextView
                android:id="@+id/tv_norek"
                style="@style/TextNormal"
                android:textStyle="bold"
                android:text="@string/dummy_norek"
                app:layout_constraintTop_toTopOf="@id/tv_label_norek"
                app:layout_constraintLeft_toRightOf="@id/tv_label_norek"
                app:layout_constraintRight_toRightOf="parent"/>
            <ImageView
                android:id="@+id/btn_copy_norek"
                style="@style/ImageViewWrapAll"
                android:padding="@dimen/dimens_10dp"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:foreground="?selectableItemBackground"
                app:layout_constraintTop_toTopOf="@id/tv_norek"
                app:layout_constraintBottom_toBottomOf="@id/tv_norek"
                app:layout_constraintRight_toLeftOf="@id/tv_norek"/>
            <TextView
                android:id="@+id/tv_label_atas_nama"
                style="@style/TextNormal"
                android:text="@string/label_atas_nama"
                android:layout_marginTop="@dimen/dimens_20dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@id/tv_label_norek"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_atas_nama"/>
            <TextView
                android:id="@+id/tv_atas_nama"
                style="@style/TextNormal"
                android:textStyle="bold"
                android:text="@string/dummy_atas_nama"
                app:layout_constraintTop_toTopOf="@id/tv_label_atas_nama"
                app:layout_constraintLeft_toRightOf="@id/tv_label_atas_nama"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:id="@+id/layout_upload_photo"
            style="@style/RelativeConstraint"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:background="@drawable/rect_rounded_10dp_gray"
            android:foreground="?selectableItemBackground"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintTop_toBottomOf="@id/layout_bank"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <LinearLayout
                android:id="@+id/layout_camera"
                style="@style/LinearVerticalWrapAll"
                android:layout_centerInParent="true"
                android:gravity="center">
                <ImageView
                    style="@style/ImageViewWrapAll"
                    android:src="@drawable/ic_photo_camera_white_24dp"/>
                <TextView
                    style="@style/TextNormal"
                    android:text="@string/btn_upload_bukti_transfer"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_result"
                style="@style/ImageViewDefault"
                android:visibility="gone"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
